# omb-py-tool

./: LICENSE  README.md  run-omb-py.sh
osu-micro-benchmarks-7.4/: CHANGES  Makefile  README  config.status  configure  configure.ac  libtool  map_rank_to_gpu
osu-micro-benchmarks-7.4/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
osu-micro-benchmarks-7.4/c/: Makefile  get_local_rank
osu-micro-benchmarks-7.4/c/mpi/: Makefile
osu-micro-benchmarks-7.4/c/mpi/pt2pt/congestion/: Makefile  Makefile.am  Makefile.in  osu_bw_fan_in  osu_bw_fan_in.c  osu_bw_fan_out  osu_bw_fan_out.c
osu-micro-benchmarks-7.4/c/mpi/pt2pt/congestion/.deps/: osu_bw_fan_in.Po  osu_bw_fan_out.Po
osu-micro-benchmarks-7.4/c/mpi/pt2pt/congestion/utils/: osu_bw_fan_util.c  osu_bw_fan_util.h
osu-micro-benchmarks-7.4/c/mpi/pt2pt/congestion/utils/.deps/: osu_bw_fan_util.Po
osu-micro-benchmarks-7.4/c/openshmem/: Makefile  osu_oshm_atomics.c  osu_oshm_barrier.c  osu_oshm_broadcast.c  osu_oshm_collect.c  osu_oshm_fcollect.c  osu_oshm_get.c  osu_oshm_get_mr_nb.c  osu_oshm_get_nb.c  osu_oshm_put.c  osu_oshm_put_mr.c  osu_oshm_put_mr_nb.c  osu_oshm_put_nb.c  osu_oshm_put_overlap.c  osu_oshm_reduce.c
osu-micro-benchmarks-7.4/c/upc/: Makefile  osu_upc_all_barrier.c  osu_upc_all_broadcast.c  osu_upc_all_exchange.c  osu_upc_all_gather.c  osu_upc_all_gather_all.c  osu_upc_all_reduce.c  osu_upc_all_scatter.c  osu_upc_memget.c  osu_upc_memput.c
osu-micro-benchmarks-7.4/python/: run.py  test.out
osu_latency-08292024-161447/: omb-osu_latency-wdiment-41753s
(+272 files in other folders)
